--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <title>
   Aliexpress Test
-  <title>
-  <body><
-<html>
+  </title>
+  <body>
+    This is my test website for aliexpress.
+  </body>
+  <style>
+    background-color:#F89406;
+    color:#fff;
+  </style>
+</html>
