--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </body>
   
   <style>
-    background-color:#F89406;
-    color:#fff;
+    body {background-color:#F89406;
+    text-color:#fff;}
   </style>
 </html>
